// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with enableSkipButton renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  />
  <View
    onLayout={[Function]}
    style={
      Array [
        undefined,
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#007398",
          "height": 150,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "scale": 1,
            },
          ],
          "width": 750,
        }
      }
    >
      <View>
        <View />
      </View>
    </View>
    <RCTScrollView
      onChangeHeaderVisibility={[Function]}
      onScroll={[Function]}
      scrollEventThrottle={1}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "height": 150,
                "opacity": 1,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                Object {
                  "height": 150,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <RCTSafeAreaView
                  emulateUnlessSupported={true}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "height": 56,
                          "paddingTop": 0,
                        },
                        undefined,
                        null,
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "paddingLeft": 5,
                          },
                          Object {
                            "alignItems": "flex-start",
                            "flex": 1,
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "flex-start",
                              "alignSelf": "flex-start",
                              "justifyContent": "center",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          accessible={true}
                          focusable={true}
                          isTVSelectable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                          testID="IconButton"
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "transparent",
                                },
                                null,
                                Object {},
                                null,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                Array [
                                  Object {
                                    "color": undefined,
                                    "fontSize": 12,
                                  },
                                  Array [
                                    Object {
                                      "color": "#ffffff",
                                    },
                                    Object {
                                      "fontSize": 18,
                                    },
                                    Array [
                                      Object {
                                        "margin": 10,
                                      },
                                      Object {},
                                    ],
                                  ],
                                  Object {
                                    "fontFamily": "icomoon",
                                    "fontStyle": "normal",
                                    "fontWeight": "normal",
                                  },
                                  Object {},
                                ]
                              }
                            >
                              
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "paddingRight": 5,
                          },
                          Object {
                            "alignItems": "flex-end",
                            "flex": 1,
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        isTVSelectable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                        testID="skipButton"
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              null,
                              Array [
                                Object {
                                  "padding": 15,
                                },
                                undefined,
                              ],
                              null,
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#505256",
                                },
                                Object {
                                  "fontFamily": "SourceSansPro-Regular",
                                },
                                Array [
                                  Object {
                                    "backgroundColor": "rgba(0,0,0,0)",
                                    "color": "#ffffff",
                                    "fontSize": 14,
                                    "fontWeight": "500",
                                    "letterSpacing": 1.5,
                                    "textAlign": "center",
                                  },
                                  Array [
                                    Object {
                                      "color": "#ffffff",
                                    },
                                    undefined,
                                  ],
                                ],
                              ]
                            }
                          >
                            SKIP
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </RCTSafeAreaView>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "color": "#ffffff",
                        "fontSize": 24,
                        "fontWeight": "300",
                        "letterSpacing": 1,
                        "lineHeight": 30,
                        "paddingHorizontal": 30,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Header Text
                </Text>
                <Text
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "#ECEEF2",
                },
              ],
              Object {
                "minHeight": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "display": "none",
              }
            }
          />
          <StepsList
            contactName="roger"
            contactStageId="3"
            onPressCreateStep={[Function]}
            onPressStep={[Function]}
            receiverId="252342354234"
          />
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#ECEEF2",
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 56,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "translateY": -56,
            },
          ],
          "width": 750,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#007398",
            "height": 56,
            "opacity": 0,
            "transform": Array [
              Object {
                "translateY": -56,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "transform": Array [
                Object {
                  "translateY": 56,
                },
              ],
            }
          }
        >
          <RCTSafeAreaView
            emulateUnlessSupported={true}
            style={
              Object {
                "backgroundColor": "transparent",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "height": 56,
                    "paddingTop": 0,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "paddingLeft": 5,
                    },
                    Object {
                      "alignItems": "flex-start",
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "alignSelf": "flex-start",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    isTVSelectable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="IconButton"
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "transparent",
                          },
                          null,
                          Object {},
                          null,
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Array [
                              Object {
                                "color": "#ffffff",
                              },
                              Object {
                                "fontSize": 18,
                              },
                              Array [
                                Object {
                                  "margin": 10,
                                },
                                Object {},
                              ],
                            ],
                            Object {
                              "fontFamily": "icomoon",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "paddingRight": 5,
                    },
                    Object {
                      "alignItems": "flex-end",
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  isTVSelectable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="skipButton"
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        null,
                        Array [
                          Object {
                            "padding": 15,
                          },
                          undefined,
                        ],
                        null,
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#505256",
                          },
                          Object {
                            "fontFamily": "SourceSansPro-Regular",
                          },
                          Array [
                            Object {
                              "backgroundColor": "rgba(0,0,0,0)",
                              "color": "#ffffff",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 1.5,
                              "textAlign": "center",
                            },
                            Array [
                              Object {
                                "color": "#ffffff",
                              },
                              undefined,
                            ],
                          ],
                        ]
                      }
                    >
                      SKIP
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </RCTSafeAreaView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`without enableSkipButton renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  />
  <View
    onLayout={[Function]}
    style={
      Array [
        undefined,
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#007398",
          "height": 150,
          "opacity": 1,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "scale": 1,
            },
          ],
          "width": 750,
        }
      }
    >
      <View>
        <View />
      </View>
    </View>
    <RCTScrollView
      onChangeHeaderVisibility={[Function]}
      onScroll={[Function]}
      scrollEventThrottle={1}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "height": 150,
                "opacity": 1,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                Object {
                  "height": 150,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <RCTSafeAreaView
                  emulateUnlessSupported={true}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "height": 56,
                          "paddingTop": 0,
                        },
                        undefined,
                        null,
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "paddingLeft": 5,
                          },
                          Object {
                            "alignItems": "flex-start",
                            "flex": 1,
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "flex-start",
                              "alignSelf": "flex-start",
                              "justifyContent": "center",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          accessible={true}
                          focusable={true}
                          isTVSelectable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                          testID="IconButton"
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "transparent",
                                },
                                null,
                                Object {},
                                null,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                Array [
                                  Object {
                                    "color": undefined,
                                    "fontSize": 12,
                                  },
                                  Array [
                                    Object {
                                      "color": "#ffffff",
                                    },
                                    Object {
                                      "fontSize": 18,
                                    },
                                    Array [
                                      Object {
                                        "margin": 10,
                                      },
                                      Object {},
                                    ],
                                  ],
                                  Object {
                                    "fontFamily": "icomoon",
                                    "fontStyle": "normal",
                                    "fontWeight": "normal",
                                  },
                                  Object {},
                                ]
                              }
                            >
                              
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "paddingRight": 5,
                          },
                          Object {
                            "alignItems": "flex-end",
                            "flex": 1,
                            "justifyContent": "center",
                          },
                        ]
                      }
                    />
                  </View>
                </RCTSafeAreaView>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "color": "#ffffff",
                        "fontSize": 24,
                        "fontWeight": "300",
                        "letterSpacing": 1,
                        "lineHeight": 30,
                        "paddingHorizontal": 30,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Header Text
                </Text>
                <Text
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "#ECEEF2",
                },
              ],
              Object {
                "minHeight": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "display": "none",
              }
            }
          />
          <StepsList
            contactName="roger"
            contactStageId="3"
            onPressCreateStep={[Function]}
            onPressStep={[Function]}
            receiverId="252342354234"
          />
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#ECEEF2",
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 56,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "translateY": -56,
            },
          ],
          "width": 750,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#007398",
            "height": 56,
            "opacity": 0,
            "transform": Array [
              Object {
                "translateY": -56,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "transform": Array [
                Object {
                  "translateY": 56,
                },
              ],
            }
          }
        >
          <RCTSafeAreaView
            emulateUnlessSupported={true}
            style={
              Object {
                "backgroundColor": "transparent",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "height": 56,
                    "paddingTop": 0,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "paddingLeft": 5,
                    },
                    Object {
                      "alignItems": "flex-start",
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "alignSelf": "flex-start",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    isTVSelectable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="IconButton"
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "transparent",
                          },
                          null,
                          Object {},
                          null,
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Array [
                              Object {
                                "color": "#ffffff",
                              },
                              Object {
                                "fontSize": 18,
                              },
                              Array [
                                Object {
                                  "margin": 10,
                                },
                                Object {},
                              ],
                            ],
                            Object {
                              "fontFamily": "icomoon",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "paddingRight": 5,
                    },
                    Object {
                      "alignItems": "flex-end",
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              />
            </View>
          </RCTSafeAreaView>
        </View>
      </View>
    </View>
  </View>
</View>
`;
